Modified config and standard histograms
This commit is quite messy - need to do a lot of work to neaten up the
code. However, this is fundamentally working.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-Histogram_Analysis/
-Subtraction_hist_calib/
-Logs/
-test1/
-teat2/
+# Directories
 .vscode/
-*.xlsx
+Tests/
+Calibration/
+
+# Log files
 *.csv
+
+# Images
 *.png
